# ADC_VAModelling_2023

./: .gitignore  README.md  hall_of_fame_2023-11-09_115833.403.csv
blackbox/: README.md
blackbox/LACTOSE/: LACTOSE_indiv_networks.py  LACTOSE_plots.py  LACTOSE_tensorflow.py
blackbox/LACTOSE/saved_model_exports/: LactoseModel1.h5  LactoseModel1.json  LactoseModel2.h5  LactoseModel2.json  LactoseModel3.h5  LactoseModel3.json  LactoseModel4.h5  LactoseModel4.json  LactoseModel5.h5  LactoseModel5.json  model_condition_0.pth  model_condition_1.pth  model_condition_2.pth  model_condition_3.pth  model_condition_4.pth  model_condition_5.pth
blackbox/transformer/: transformer.pth  transformer.py  transformer_10epochs.pth  viz_transformer.py
cpp/: CMakeLists.txt  circuit_model_plotter.cpp
cpp/bench/: CMakeLists.txt  circuit_model_bench.cpp
cpp/data_generator/: CMakeLists.txt  data_generator.cpp
cpp/mna/: ts_mna.hpp
cpp/ndk/: TS_NDK.cpp  TS_NDK.h  ts_config.json
cpp/rnn/: model_best_12.json  model_best_24.json  model_best_48.json  ts_rnn.hpp
cpp/sym/: ts_sym.hpp
cpp/wdf/: 1N4148_2x8.json  ds1_netlist.txt  ds1_wdf.hpp  ts_wdf.hpp  tube_screamer.txt
greybox/sympy/: hall_of_fame_2023-11-09_114108.309.csv  hall_of_fame_2023-11-09_115052.245.csv  hall_of_fame_2023-11-09_115355.809.csv  hall_of_fame_2023-11-09_115603.337.csv  hall_of_fame_2023-11-09_141153.384.csv  main.py
slides/: .gitignore  README.md  deploy.sh  slides.md
slides/pages/: blackbox.md  conclusion.md  greybox.md  intro.md  nodal.md  paste  test_stuff.md  wdf.md
training/data/: .gitignore  generate_data.sh
